--- a/content/en/docs/release_notes/20200923_relnotes.md
+++ b/content/en/docs/release_notes/20200923_relnotes.md
@@ -1,7 +1,7 @@
 ---
 title: Platform Management 8.1.0 release notes
 linkTitle: Platform Management 8.1.0 release notes
-description: ADD A DESCRIPTION
+description: New features, improvements, and bug fixes for the release.
 weight: 200
 date: 2020-09-23
 Hide_readingtime: true
