--- a/content/en/docs/release_notes/20201001_relnotes.md
+++ b/content/en/docs/release_notes/20201001_relnotes.md
@@ -1,7 +1,7 @@
 ---
 title: Platform Management 8.2.1 release notes
 linkTitle: Platform Management 8.2.1 release notes
-description: ADD A DESCRIPTION
+description: New features, improvements, and bug fixes for the release.
 weight: 200
 date: 2020-10-01
 Hide_readingtime: true
