--- a/content/en/docs/release_notes/20210518_relnotes.md
+++ b/content/en/docs/release_notes/20210518_relnotes.md
@@ -1,7 +1,7 @@
 ---
 title: Platform Management 8.6.0 release notes
 linkTitle: Platform Management 8.6.0 release notes
-description: ADD A DESCRIPTION
+description: New features, improvements, and bug fixes for the release.
 weight: 200
 date: 2021-05-18
 Hide_readingtime: true
